syntax = "proto3";

package common;
option go_package = "./;common";
service EmailService{
  rpc SendEmail(GetEmailRequest) returns(GetEmailResponse);
}

message GetEmailRequest{
  string sender=1;
  string recipient=2;
  string cpuUsed=3; //cpu使用情况
  string memUsed=4;  //内存使用情况
  string grade=5;  //报警等级

}

message GetEmailResponse{
  int64 code=1;
  string info=2;

}
