syntax="proto3";

package proto;
option go_package = "/";

message UserRequest{
    int32  id=1;
    double cpuused=2;
    double  memused=3;
    double DiskUsed=4;
    int64  timeout=5;
}

message UserResponse{
    int32 code=1;
    string mesg=2;
}

service UserInfoService{
  rpc GetUserInfo(UserRequest) returns(UserResponse){}
}

message SqlRequest{
    int64   id=1;
    string  name=2;
    int64  periodTime=3;
    int64  maxValueCpu=4;
    int64  maxValueMem=5;
    int64  maxValueDisk=6;
}

message SqlResponse{
    int64 code=1;
    string msg=2;
    repeated string data=3;
}

//service SqlDefaultService{
//    rpc GetSqlInfo(SqlRequest) returns(SqlResponse){}
//}

message AdminRequest{
        repeated string name=1;
        repeated string email=2;
        repeated int64  id=3;
}

message AdminResponse{
    int64 code=1;
    string msg=2;
    repeated string data=3;
}
//service AdminGetService{
//    rpc GetAdminInfo(AdminRequest) returns(AdminResponse){}
//}

service UpdateAlertingConfig {
    // Sends a greeting
    //   rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc GetSqlInfo(SqlRequest)returns (SqlResponse){}
    rpc GetAdminInfo(AdminRequest) returns(AdminResponse){}
}
